--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Config for ReactJS + Redux + Webpack + Babel + Eslint + SASS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,6 +24,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "eslint-config-rallycoding": "^3.2.0",
     "file-loader": "^1.1.11",
