--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,9 @@
 {
-  "extends": "rallycoding"
+  "extends": "rallycoding",
+  "rules": {
+    "arrow-body-style": 0
+  },
+  "env": {
+    "amd": true
+  }
 }
