--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "eslint-config-rallycoding": "^3.2.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^3.0.7",
     "node-sass": "^4.9.2",
     "prop-types": "^15.6.2",
     "redux-devtools": "^3.4.1",
@@ -46,7 +46,7 @@
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.0.0",
     "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0"
   }
 }
